--- a/demo_project/templates/index_4cam.html
+++ b/demo_project/templates/index_4cam.html
@@ -306,7 +306,7 @@
 
                         <!--    Room  -->
                         <g id="room">
-                            <image href="/static/data/cameras600.png" height="100%" width="100%"></image>
+                            <image href="/static/data/cameras600v2.png" height="100%" width="100%"></image>
                             <!-- <image href="/static/data/roomPlan.png" height="600" width="625"></image> -->
 
                         </g>
